--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@mui/material": "^6.1.4",
     "@reduxjs/toolkit": "^1.9.5",
     "country-state-city": "^3.1.4",
     "framer-motion": "^10.12.16",
